widget/windows/WinIMEHandler.h
@@ -111,9 +111,10 @@ public:
 #endif // #ifdef DEBUG
 
 private:
-  static bool sPluginHasFocus;
-
+  static nsWindow* sFocusedWindow;
   static InputContextAction::Cause sLastContextActionCause;
+
+  static bool sPluginHasFocus;
 
 #ifdef NS_ENABLE_TSF
   static decltype(SetInputScopes)* sSetInputScopes;
